crates/ruff_python_parser/tests/snapshots/invalid_syntax@aug_assign_stmt_missing_rhs.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/aug_assign_stmt_missing_rhs.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..27,
        body: Suite {
            range: 0..27,
            node_index: NodeIndex(None),
            statements: [
                AugAssign(
                    StmtAugAssign {
                        node_index: NodeIndex(None),
                        range: 0..4,
                        target: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 0..1,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                        op: Add,
                        value: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 4..4,
                                id: Name(""),
                                ctx: Invalid,
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 5..10,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 5..10,
                                left: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 5..6,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                op: Add,
                                right: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 9..10,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
                AugAssign(
                    StmtAugAssign {
                        node_index: NodeIndex(None),
                        range: 11..17,
                        target: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 11..12,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                        op: Add,
                        value: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 16..17,
                                id: Name("y"),
                                ctx: Load,
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 21..26,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 21..26,
                                left: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 21..22,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                                op: Add,
                                right: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 25..26,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | x +=
  |     ^ Syntax Error: Expected an expression
2 | 1 + 1
3 | x += y +=
4 | 2 + 2
  |


  |
1 | x +=
2 | 1 + 1
3 | x += y +=
  |        ^^ Syntax Error: Expected a statement
4 | 2 + 2
  |


  |
1 | x +=
2 | 1 + 1
3 | x += y +=
  |          ^ Syntax Error: Expected a statement
4 | 2 + 2
  |
