crates/ruff_python_parser/tests/snapshots/invalid_syntax@case_expect_indented_block.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/case_expect_indented_block.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..43,
        body: Suite {
            range: 0..43,
            node_index: NodeIndex(None),
            statements: [
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 0..42,
                        subject: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 6..13,
                                id: Name("subject"),
                                ctx: Load,
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 19..26,
                                node_index: NodeIndex(None),
                                pattern: MatchValue(
                                    PatternMatchValue {
                                        node_index: NodeIndex(None),
                                        range: 24..25,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 24..25,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 26..26,
                                    node_index: NodeIndex(None),
                                    statements: [],
                                },
                            },
                            MatchCase {
                                range: 31..42,
                                node_index: NodeIndex(None),
                                pattern: MatchValue(
                                    PatternMatchValue {
                                        node_index: NodeIndex(None),
                                        range: 36..37,
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 36..37,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 39..42,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 39..42,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 39..42,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | match subject:
2 |     case 1:
3 |     case 2: ...
  |     ^^^^ Syntax Error: Expected an indented block after `case` block
  |
